bk_ida/gobmkida/g1/do_owl_attack
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_owl_attack/src/engine/owl.c:1842:39: error: use of undeclared identifier 'unk_4936E3'
shape_moves[0].name = ( const char *)&unk_4936E3; 
                                      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_owl_attack/src/obj/1/owl.o] Error 1
